--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
   font-size: 16px;
   padding: 11px 26px 11px 26px;
   border: 1px solid var(--orange);
-
+  transition: all 0.5s;
 }
 
 .button:hover {
