--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -41,6 +41,9 @@ textarea{
     top: 1rem;
     left: 8rem;
 }
+.c-awesome{
+    width: 100%;
+}
 
 @media screen and (max-width: 480px) {
     .contact-form{
