--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -45,7 +45,7 @@ textarea{
     width: 100%;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
     .contact-form{
         padding: 0;
         flex-direction: column;
@@ -54,6 +54,9 @@ textarea{
     }
     .c-right .user{
         width: 16rem;
+    }
+    .c-awesome {
+        margin-top: 0;
     }
 
 }   
