--- a/src/Components/Experience/Experience.css
+++ b/src/Components/Experience/Experience.css
@@ -43,5 +43,8 @@
     .experience{
         transform: scale(0.7);
         margin-bottom: 0;
+        position: relative;
+        top: 11rem;
+        height: auto;
     }
 }
