--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -51,7 +51,20 @@
     font-size: 16px;
 }
 
-@media screen and (max-width: 480px) {
+/* @media screen and (max-width: 480px) {
+    .n-list {
+        display: none;
+    }
+    .n-button{
+        display: none;
+    }
+    .n-left {
+        flex: auto;
+        width: 100%;
+        justify-content: space-between;
+    }
+} */
+@media screen and (max-width:768px) {
     .n-list {
         display: none;
     }
