--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -70,7 +70,7 @@
     padding: 7px 12px;
     border: none !important;
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
     .services {
       margin-top: 0;
       flex-direction: column;
@@ -86,5 +86,12 @@
     }
     .cards > * {
       position: static;
+    }
+    .awesome{
+        width: 100%;
+        margin-top: 7rem;
+    }
+    .awesome>:nth-child(2){
+        font-size: 2rem;
     }
   }
